external-crates/move/crates/move-compiler/tests/move_2024/migration/let_mut_migrate.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09003]: unused assignment
  ┌─ tests/move_2024/migration/let_mut_migrate.move:7:9
  │
7 │         yip = 0;
  │         ^^^ Unused assignment for variable 'yip'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_yip')
  │
  = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04024]: invalid usage of immutable variable
  ┌─ tests/move_2024/migration/let_mut_migrate.move:7:9
  │
3 │     public fun t(x: u64, yip: u64, s: S): u64  {
  │                          --- To use the variable mutably, it must be declared 'mut', e.g. 'mut yip'
  ·
7 │         yip = 0;
  │         ^^^ Invalid assignment of immutable variable 'yip'

error[E04024]: invalid usage of immutable variable
  ┌─ tests/move_2024/migration/let_mut_migrate.move:8:9
  │
3 │     public fun t(x: u64, yip: u64, s: S): u64  {
  │                  - To use the variable mutably, it must be declared 'mut', e.g. 'mut x'
  ·
8 │         x = yes + 1;
  │         ^ Invalid assignment of immutable variable 'x'

error[E04024]: invalid usage of immutable variable
  ┌─ tests/move_2024/migration/let_mut_migrate.move:9:9
  │
5 │         let S { f: fin } = s;
  │                    --- To use the variable mutably, it must be declared 'mut', e.g. 'mut fin'
  ·
9 │         fin = fin + 1;
  │         ^^^ Invalid assignment of immutable variable 'fin'

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/migration/let_mut_migrate.move:10:9
   │
 4 │         let yes = 0;
   │             --- To use the variable mutably, it must be declared 'mut', e.g. 'mut yes'
   ·
10 │         yes = x + fin;
   │         ^^^ Invalid assignment of immutable variable 'yes'

warning[W09003]: unused assignment
   ┌─ tests/move_2024/migration/let_mut_migrate.move:15:24
   │
15 │         let x = 5; let y = 10;
   │                        ^ Unused assignment for variable 'y'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_y')
   │
   = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/migration/let_mut_migrate.move:16:9
   │
15 │         let x = 5; let y = 10;
   │             - To use the variable mutably, it must be declared 'mut', e.g. 'mut x'
16 │         x = x + 1;
   │         ^ Invalid assignment of immutable variable 'x'

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/migration/let_mut_migrate.move:17:9
   │
15 │         let x = 5; let y = 10;
   │                        - To use the variable mutably, it must be declared 'mut', e.g. 'mut y'
16 │         x = x + 1;
17 │         y = x + 1;
   │         ^ Invalid assignment of immutable variable 'y'
